--- a/public/test.html
+++ b/public/test.html
@@ -31,6 +31,12 @@
             el: '#app',
             vuetify: new Vuetify(),
         })
+
+        let arr = [1,2,3,4]
+        let arr2 = [...arr]
+        arr2.push(1)
+        console.log(arr,arr2);
+         
     </script>
 </body>
 
